--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,87 @@
 /* ini css */
+
+.main-title{
+    text-align: center;
+
+}
+
+main {
+display: flex;
+justify-content: space-around;
+
+}
+
+.main-content{
+    
+    flex: 1;
+    padding: 12px
+    
+}
+.input-title{
+font-size: 14px;
+font-weight: bold;
+
+}
+form{
+    background-color: aliceblue;
+    padding: 12px;
+    border-radius: 8px;
+}
+
+
+.button{
+
+    border-radius: 6px;
+}
+    
+   
+
+.submit{
+    
+    background-color: aqua;
+    border: 1px solid lightblue;
+
+
+}
+
+.reset{
+
+    background-color: white;
+    border: 1px solid lightblue;
+
+}
+
+input[type=number] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+  }
+  
+  input[type=number]:focus {
+    border: 3px solid #555;
+  }
+ .result-section {
+
+    border: 1px cyan solid;
+    text-align: center;
+    background-color: aliceblue;
+    border-radius: 6px;
+    padding: 12px;
+}
+ /* Responsive Website On Mobile */
+ @media only screen and (max-width: 425px){
+    main{
+        flex-direction: column;
+    }
+
+    .result-content{
+    display: block !important;
+
+    }
+ }
+
